<resources>
    <string name="app_name">Gestion Emploi</string>

    <!--GILROY-->
    <string name="font_regular">fonts/Roboto-Regular.ttf</string>
    <string name="font_medium">fonts/Roboto-Medium.ttf</string>
    <string name="font_bold">fonts/Roboto-Bold.ttf</string>
    <string name="font_black">fonts/Roboto-Black.ttf</string>
    <string name="font_thin">fonts/Roboto-Thin.ttf</string>
    <string name="font_light">fonts/Roboto-Light.ttf</string>
    <string name="font_italic">fonts/Roboto-Italic.ttf</string>

    <!--MARK_WEB-->
    <string name="font_mark_web_thin">fonts/MARK_WEB_W04_BLACK.TTF</string>

    <string name="we_help_you">we help you to find free \n a new job</string>
    <string name="forgetpass">enter your registered email \n address to get password</string>
    <string name="skip">SKIP</string>
    <string name="btn_login">Login</string>
    <string name="fpassword">Forget password ?</string>
    <string name="join"> join ?</string>
    <string name="Haccount"> Already have on account ?</string>

    <string name="logout">Are you sure to logout from this app ?</string>
    <string name="exit_screen">Sure if you wan\'t to exits this app</string>
    <string name="no_internet">No internet connection \n Go to setting and connect to network.</string>
    <string name="error_msg">Please try again something went to wrong</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

    <string name="validation_name">Please enter name.</string>
    <string name="validation_email">Please enter email.</string>
    <string name="validation_password">Please enter password.</string>
    <string name="validation_oldpassword">Please enter old password.</string>
    <string name="validation_cpassword">Please enter confirm password.</string>
    <string name="validation_valid_email">Please enter valid email.</string>
    <string name="validation_valid_cpassword">Password and confirm password must be same.</string>
    <string name="validation_valid_password">Please enter must be minimum eight character.</string>

    <string name="validation_category">Please select category.</string>
    <string name="validation_wallpaper">Please select wallpaper file.</string>
    <string name="validation_wallpapername">Please enter wallpaper name.</string>

    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>

    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_dialog_title">Upload Image</string>
    <string name="upload_picker_title">Select Picture</string>
    <string name="directory_create_fail">Failed to create directory</string>
    <string name="access_media_permissions_msg">To attach photos, we need to access media on your device</string>
    <string name="continue_txt">Continue</string>
    <string name="not_now">NOT NOW</string>
    <string name="media_access_denied_msg">You denied storage access, no photos will be added.</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>

    <string name="ic_close">"\ue918"</string>
    <string name="ic_text">"\ue945"</string>
    <string name="ic_draw">""\ue944</string>
    <string name="ic_images">"\ue949"</string>
    <string name="ic_save">"\ue946"</string>
    <string name="ic_clear_all">"\ue947"</string>
    <string name="ic_continue">"\ue948"</string>
    <string name="ic_delete">"\ue92c"</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="choose_from_camera">Choose From Camera</string>
    <string name="undo">Undo</string>
    <string name="erase">Erase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
