<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix" >
    <com.w.app.utils.NonSwipeableViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_sahedow"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        fontPath="@string/font_medium"
        android:id="@+id/tvBtnSkip"
        android:onClick="onClick"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:paddingTop="@dimen/_7sdp"
        android:paddingBottom="@dimen/_7sdp"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/bg_strock_black"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_40sdp"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            fontPath="@string/font_bold"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_15sdp"
            android:textSize="@dimen/_18ssp"
            android:text="@string/we_help_you"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_corner_white_10"
            fontPath="@string/font_medium"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/tvLogin"
            android:onClick="onClick"
            android:text="@string/btn_login"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fpassword"
                fontPath="@string/font_medium"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join"
                android:layout_marginLeft="@dimen/_5sdp"
                fontPath="@string/font_bold"
                android:textSize="@dimen/_14ssp"
                android:id="@+id/tvRegistration"
                android:onClick="onClick"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>