<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.w.app.utils.NonSwipeableViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_sahedow"/>
    <ImageView
        android:layout_width="@dimen/_38sdp"
        android:layout_height="@dimen/_38sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_3sdp"
        android:layout_marginLeft="@dimen/_2sdp"
        android:tint="@color/white"
        android:src="@drawable/ic_back"
        android:id="@+id/ivBack"
        android:onClick="onClick"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_40sdp"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            fontPath="@string/font_bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/forgetpass"
            tools:ignore="MissingPrefix" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/bg_corner_white_10"
            android:id="@+id/edEmailAddress"
            fontPath="@string/font_medium"
            android:textColor="@color/black"
            android:imeOptions="actionGo"

            android:paddingLeft="@dimen/_10sdp"
            android:hint="Email Address"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:backgroundTint="#1F2124"
            android:onClick="onClick"
            android:id="@+id/tvSubmit"
            android:background="@drawable/bg_corner_white_10"
            fontPath="@string/font_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="Submit"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_10sdp"
            tools:ignore="MissingPrefix" />


    </LinearLayout>

</RelativeLayout>